solving problems of the 2nd level

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
 
-    <div class="media">
+    <!-- <div class="media">
         <img src="#" class="align-self-start mr-3" alt="#">
         <div class="media-body">
             <h5 class="mt-0">Top-aligned media</h5>
@@ -69,7 +69,7 @@
                 Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
             </p>
         </div>
-    </div>
+    </div> -->
 
 
     <span>
@@ -144,19 +144,109 @@
     <!-- 4 обработка событий -->
 
 
-    <img src="https://placeimg.com/1000/1000/animals" alt="">
+    <!-- <img src="https://placeimg.com/1000/1000/animals" alt="">
     <img src="https://placeimg.com/1000/1000/arch" alt="">
     <img src="https://placeimg.com/1000/1000/nature" alt="">
     <img src="https://placeimg.com/1000/1000/people" alt="">
     <img src="https://placeimg.com/1000/1000/tech" alt="">
     <img src="https://placeimg.com/1000/1000/tech/grayscale" alt="">
-    <img src="https://placeimg.com/1000/1000/tech/sepia" alt="">
+    <img src="https://placeimg.com/1000/1000/tech/sepia" alt=""> -->
 
     <button>Кнопка</button>
     <button class="btn">Кнопка с классом btn</button>
     <button>Кнопка</button>
 
 
+    <textarea></textarea>
+
+
+
+
+    <!-- задания 2 уровня -->
+
+
+
+    <!-- 1 получение элементов и свойств -->
+
+
+    <img src="https://placeimg.com/100/100/animals" alt="">
+    <img src="https://placeimg.com/100/100/arch" alt="">
+    <img src="https://placeimg.com/100/100/people" alt="">
+
+    <h3 class="one">Заголовок</h3>
+    <a class="one" href="#">ссылка</a>
+    <p class="one">параграф</p>
+
+    <h2 class="one lorem">Заголовок 1</h2>
+    <h2 class="two ipsum">Заголовок 2</h2>
+    <h2 class="three">Заголовок 3</h2>
+
+    <div class="one two three"></div>
+
+    <div class="product hidden"></div>
+
+    <div class="card hidden">
+        Lorem ipsum dolor sit.
+    </div>
+    <div class="card">
+        Lorem ipsum dolor sit.
+    </div>
+    <div class="card hidden">
+        Lorem ipsum dolor sit.
+    </div>
+    <div class="card">
+        Lorem ipsum dolor sit.
+    </div>
+
+    <a href="#">ссылка</a>
+    <a href="#"></a>
+    <a href="#">ссылка</a>
+    <a href="#"></a>
+
+    <b>Lorem, ipsum.</b>
+    <b class="sign">Lorem, ipsum.</b>
+    <b class="sign">Lorem, ipsum.</b>
+    <b>Lorem, ipsum.</b>
+
+    <i class="green">тут текст НЕ должен быть зеленым</i>
+    <i>здесь текст сделайте зеленым</i>
+    <i class="green">тут текст НЕ должен быть зеленым</i>
+    <i>здесь текст сделайте зеленым</i>
+
+
+    <!-- 2 обработка события -->
+
+
+    <button id="one" class="btn">Кнопка 1</button>
+
+    <p class="first second third">
+        Lorem ipsum dolor sit.
+    </p>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        текст
+    </div>
+
+    <div class="product">
+        <span class="productName">Товар 1</span> Описание товара
+    </div>
+
+    <ul>
+        <li>
+            <button>Кнопка</button>
+        </li>
+        <li>
+            <button>Кнопка</button>
+        </li>
+        <li>
+            <button>Кнопка</button>
+        </li>
+    </ul>
+
+
+    <!-- 3 стили -->
+
+    <button>Кнопка</button>
     <textarea></textarea>
 
 </body>
