--- a/index.html
+++ b/index.html
@@ -7,10 +7,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="app.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- 1 уровень -->
 
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing.
+    </p>
+
+
+    <!-- 2 уровень -->
+
+    <button data-id="1" data-value="btn1">Кнопка 1</button>
+    <button data-id="2" data-value="btn2">Кнопка 2</button>
+    <button data-id="3" data-value="btn3">Кнопка 3</button>
+
+    <input type="range" min="20" max="100">
+    <div>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, expedita.
+    </div>
+
+
+    <!-- 3 уровень -->
+
+
+    <div class="container">
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Link 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 3</a>
+            </li>
+        </ul>
+
+        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+    </div>
+
+    <!-- 
+    Задание. Нужно сделать, чтобы при кликах по .nav-link:
+    1. Класс active назначался тому .nav-link, по которому кликнули, а у предыдущего
+    .nav-link, чтобы этот класс убирался.
+    2. В зависимости от того по какому .nav-link кликнули нужно чтобы менялся текст
+    в .text, соответствующие тексты вы найдете в app.js
+    -->
+
+    <button>Показать сообщение</button>
+    <div class="message">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, aliquam enim voluptates quibusdam perferendis sint ipsa, nulla quas doloribus nobis libero voluptatem unde inventore. Ut quas corporis fugit error explicabo? Ipsa quos qui similique sequi
+        officia quod ab reiciendis alias!
+    </div>
+
+
+    <!-- 4 уровень -->
+
+    <button data-type="phones">Показать смартфоны</button>
+    <button data-type="tablets">Показать планшеты</button>
+    <button data-type="tv">Показать телевизоры</button>
+
+    <div class="products"></div>
+
+    <!-- 
+    Задание. Вам нужно при кликах по кнопкам показывать соответствующие товары.
+    Информация о товарах находится в объекте products в файле app.js. Для генерации
+    разметки можете использовать шаблон представленный в app.js.
+    -->
 </body>
 
 </html>
