--- a/index.html
+++ b/index.html
@@ -6,11 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <script defer src="app.js"></script>
+    <script src="scripts/positions.js"></script>
 </head>
 
 <body>
 
+    <!-- 1 текст вместо картинки -->
+
+
+    <div class="product">
+        <div class="productName">Product 1 name</div>
+        <img src="http://unsplash.it/150/150?random&gravity=center" alt="">
+        <button>Подробнее</button>
+    </div>
+    <div class="product">
+        <div class="productName">Product 2 name</div>
+        <img src="http://unsplash.it/150/150?random&gravity=center" alt="">
+        <button>Подробнее</button>
+    </div>
+    <div class="product">
+        <div class="productName">Product 3 name</div>
+        <img src="http://unsplash.it/150/150?random&gravity=center" alt="">
+        <button>Подробнее</button>
+    </div>
+
+    <!-- 2 подгрузка постов -->
+
+    <div class="container">
+        <h1>
+            Нужно сделать, чтобы при прокрутке на страницу подгружались все новые и новые посты.
+        </h1>
+        <div class="scrollCheck"></div>
+    </div>
+
+    <!-- 3 шахматная доска -->
 </body>
 
 </html>
